# perceptron_test_on_blockchain

./: Cargo.toml  README.md  perception_test_on_blockchain.wasm
neardev/: dev-account  dev-account.env
perceptron_impl/: README.md  package-lock.json  package.json
perceptron_impl/pages/: index.js  train.js
perceptron_impl/styles/: Home.module.css
src/: lib.rs
